# 27.01.2022

./: README.md  data.py  europeridit.py  module1.py  py.py  pyproject.toml  window.py
