[tool.poetry]
name = "dr-kush"
version = "0.1.0"
description = ""
authors = ["Avannit <ivan.nikolaevich.h@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
keyboard = "^0.13.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
